{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 34,
  "lineage": "ebcad681-231d-da11-05d0-5e5be547d26c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:608081408717:vpc/vpc-fc037894",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-4d653625",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-32f0a35a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fc037894",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7c2f1b14",
            "owner_id": "608081408717",
            "state": "available",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:loadbalancer/app/andchievements/077fc225f95c5f6c",
            "arn_suffix": "app/andchievements/077fc225f95c5f6c",
            "dns_name": "andchievements-941960818.eu-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:loadbalancer/app/andchievements/077fc225f95c5f6c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "andchievements",
            "security_groups": [
              "sg-0e17d14f2a60699ed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-8331edcf"
              },
              {
                "subnet_id": "subnet-a3e861d9"
              }
            ],
            "subnets": [
              "subnet-8331edcf",
              "subnet-a3e861d9"
            ],
            "vpc_id": "vpc-fc037894",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:listener/app/andchievements/077fc225f95c5f6c/add8778aa48c922e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:targetgroup/andchievements/c8f834a17ac2307c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:listener/app/andchievements/077fc225f95c5f6c/add8778aa48c922e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:loadbalancer/app/andchievements/077fc225f95c5f6c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.main",
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:targetgroup/andchievements/c8f834a17ac2307c",
            "arn_suffix": "targetgroup/andchievements/c8f834a17ac2307c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:608081408717:targetgroup/andchievements/c8f834a17ac2307c",
            "lambda_multi_value_headers_enabled": false,
            "name": "andchievements",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-fc037894"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:608081408717:subnet/subnet-a3e861d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-a3e861d9",
            "map_public_ip_on_launch": true,
            "owner_id": "608081408717",
            "tags": {
              "Name": "Default subnet for eu-west-2a"
            },
            "vpc_id": "vpc-fc037894"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:608081408717:subnet/subnet-8331edcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-8331edcf",
            "map_public_ip_on_launch": true,
            "owner_id": "608081408717",
            "tags": {
              "Name": "Default subnet for eu-west-2b"
            },
            "vpc_id": "vpc-fc037894"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:608081408717:vpc/vpc-fc037894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-bb9fc5d3",
            "default_route_table_id": "rtb-7c2f1b14",
            "default_security_group_id": "sg-aa23c4c9",
            "dhcp_options_id": "dopt-32f0a35a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fc037894",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7c2f1b14",
            "owner_id": "608081408717",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:608081408717:security-group/sg-0e17d14f2a60699ed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e17d14f2a60699ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "andchievements",
            "name_prefix": null,
            "owner_id": "608081408717",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-fc037894"
          }
        }
      ]
    }
  ]
}